[package]
name = "websocket-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "2.3.3"
async-std = {version = "1.12.0", features = ["unstable"]}
async-tungstenite = "0.17.2"
base64 = "0.13.0"
futures = "0.3.21"
hex = "0.4.3"
http-types = "2.12.0"
ndjsonlogger = "0.1.0"
random-fast-rng = "0.1.1"
serde = {version = "1.0.140", features=["derive"]}
serde_json = "1.0.82"
sha1 = "0.10.1"

[dependencies.ndjsonloggercore]
git = "https://github.com/flickpp/ndjsonloggercore.git"
rev = "2377b15b140655cce91c44736a739ff95bdf42a6"
features = ["isotimestamp", "std"]
